add seller to menu

--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -33,7 +33,7 @@
 							<a href="#">Métodos de pago</a>
 							<a href="#">Configuracion cuenta</a>
 							<a href="/user/{{profile.username}}/account/password">Cambiar contraseña</a>
-							<a href="#">Editar datos de vendedor</a>
+							<a href="/user/{{profile.username}}/account/seller">Editar datos de vendedor</a>
 							<a href="#">Gestor de pedidos</a>
 						</ul>
 					</div>
