--- a/app/views/user/account/seller.html
+++ b/app/views/user/account/seller.html
@@ -1,8 +1,10 @@
 {% extends '../../partials/base.html' %}
-{% set pageTitle = 'Cambiar contraseña' %}
+{% set pageTitle = 'Administrar cuenta' %}
 
 {% block elements %}
 	<div class="am-profile" style="padding-left: 0; padding-right: 0;">
+
+
 
 		<div class="grid-container u-margin-top-20">
 			<div class="grid-100">
@@ -26,35 +28,95 @@
 							<a href="#">Métodos de pago</a>
 							<a href="#">Configuracion cuenta</a>
 							<a href="/user/{{profile.username}}/account/password">Cambiar contraseña</a>
-							<a href="/user/{{profile.username}}/account/seller"  class="selected">Editar datos de vendedor</a>
+							<a href="/user/{{profile.username}}/account/seller" class="selected">Editar datos de vendedor</a>
 							<a href="#">Gestor de pedidos</a>
 						</ul>
 					</div>
-					<!-- <div class="am-Filter-item">
-						<header class="am-Filter-header">
-							<i class="fa fa-bars"></i><p>Tienda en línea</p>
-						</header>
-					</div>
-					<div class="am-Filter-item">
-						<ul class="am-Filter-subOptions">
-							<a href="#">Quiero abrir mi tienda</a>
-						</ul>
-					</div> -->
 				</div>
 
 				<div class="am-profile-box grid-container u-margin-top-20">
-					<form class="password-form">
-						<div class="grid-100" style="clear: inherit;">
-							<p class="title" style="padding-top: 0;">Direccion</p>
-							<input class="input" type="text" name='direction' required placeholder="Dirección"/>
+					<form class="complete-form">
+
+						<div class="separator u-margin-top-30">
+							<span class="line"></span><span class="text">VALIDACIÓN DE VENDEDOR</span><span class="line"></span>
 						</div>
 
-						<div class="grid-100 save mobile-grid-100">
-							<button class="button u-margin-top-30" data-color="green">GUARDAR CAMBIOS</button>
+						<div class="grid-50 mobile-grid-100">
+							<p class="title">País</p>
+							<select class="input select" name='gender'>
+								<option disabled checked>Seleccionar País</option>
+								<option>Argentina</option>
+								<option>Bolivia</option>
+								<option>Brasil</option>
+								<option>Chile</option>
+								<option>Colombia</option>
+								<option>Ecuador</option>
+								<option>España</option>
+								<option>Estados Unidos</option>
+								<option>Mexico</option>
+								<option>Paraguay</option>
+								<option>Peru</option>
+								<option>Uruguay</option>
+								<option>Venezuela</option>
+							</select>
+						</div>
+						<div class="grid-50 mobile-grid-100">
+							<p class="title">Ciudad</p>
+							<select class="input select" name='gender'>
+								<option disabled checked>Seleccionar ciudad</option>
+								<option>Ciudad 1</option>
+								<option>Ciudad 2</option>
+							</select>
+						</div>
+
+						<div class="grid-50 mobile-grid-100">
+							<p class="title">Estado o provincia</p>
+							<input class="input" name='' value="" type="text" placeholder="Seleccionar Estado"/>
+						</div>
+						<div class="grid-50 mobile-grid-100">
+							<p class="title">Código postal</p>
+							<input class="input" name='' value="" type="text" placeholder="Ingresa código postal"/>
+						</div>
+
+						<div class="grid-100">
+							<p class="title">Dirección de Envío</p>
+							<input class="input" type="text" value="" name='' placeholder="Dirección Línea 1"/>
+							<p class="title">Teléfono móvil</p>
+							<input class="input" type="text" value="" name='' placeholder="Ingresa el número de whatsapp"/>
+							<p class="title">Usuario Paypal</p>
+							<input class="input" type="text" value="" name='' placeholder="Ingresa el email de tu cuenta en paypal"/>
+						</div>
+
+						<div class="artist-data {% if !user.isArtist %} hide {%endif%}">
+							<div class="separator u-margin-top-40">
+								<span class="line"></span><span class="text">VENDEDORES EN PERÚ </span><span class="line"></span>
+							</div>
+
+							<div class="grid-100 mobile-grid-100">
+								<p class="title">¿Que tipo de documento tienes?</p>
+							</div>
+
+							<div class="grid-50 mobile-grid-100">
+								<select class="input select" name=''>
+									<option value='1' checked>Seleccionar tipo</option>
+									<option value='2' >Nombre de artista</option>
+								</select>
+							</div>
+
+							<div class="grid-100 mobile-grid-100">
+								<p class="title">Nro de Documento</p>
+								<input class="input" type="text" value="" name='' placeholder="Ingresa un documento válido"/>
+								<p class="title">Nombre completo/razón social</p>
+								<input class="input" type="text" value="" name='' placeholder="Ingresa un documento válido"/>
+							</div>
+							
+						</div>
+						<div class="grid-100 mobile-grid-100">
+							<button class="button save u-margin-top-40" data-color="green">GUARDAR CAMBIOS</button>
 						</div>
 
 						<div class="grid-100 save-loading hide mobile-grid-100">
-							<button class="button u-margin-top-30" data-color="green"><i class="load fa fa-spinner"></i></button>
+							<button class="button u-margin-top-40" data-color="green"><i class="load fa fa-spinner"></i></button>
 						</div>
 					</form>
 				</div>
@@ -63,15 +125,18 @@
 
 	</div>
 {% endblock %}
-
 {% block scripts %}
-  <script src='//maps.googleapis.com/maps/api/js?libraries=places'></script>
 	<script>
-		$(function() {
-			new APP.AccountApplyScreen();
-			$('.account-title').click(function () {
-				$('.am-Filter.account.mobile').toggleClass('visible')
-			});
-		});
+	var profile = {{profile|json|safe}};
+	var context = {{context|json|safe}};
+	var interests = {{interests|json|safe}};
+	$(function() {
+		$.cloudinary.config({{cloudinary.config()|json|safe}});
+		new APP.AccountIndexScreen();
+
+		$('.account-title').click(function () {
+			$('.am-Filter.account.mobile').toggleClass('visible')
+		})
+	});
 	</script>
 {% endblock %}
