--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -12,20 +12,29 @@
 		<div class="grid-100">
 			<section class="slider">
 				<div class="slider-items">
-					<a href="/blog/post/tengo-una-obsesin-por-el-color-rojo-entrevista-a-yulia-katkova-160216031537">
-					<div class="slider-item js-slide" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1456346709/general/yulia-banner.jpg')">
+					<a href="/compra-y-vende-arte-en-internet-latinoamerica">
+					<div class="slider-item js-slide" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065553/general/home-slider-1.jpg')">
+						<div class="slider-item-inner">
+							<p class="title">La primera red social de artistas visuales y creadores de latinoamerica</p>
+							<!-- <p class="subtitle u-padding-top-10">James Gurney picks the most interesting pieces from the luxury watch fair</p> -->
+						</div>
 					<!-- <img src="/img/banners/banner-1.jpg">
 						<div class="slider-item-inner">
 							<p class="title">Tentacles Abound in Our Best Jellyfish Pictures</p>
 							<p class="subtitle u-padding-top-10">James Gurney picks the most interesting pieces from the luxury watch fair</p>
 						</div>-->
 					</div>
-					<a href="https://kuestionario.typeform.com/to/VNsGbl">
+
+					<a href="/blog/post/tengo-una-obsesin-por-el-color-rojo-entrevista-a-yulia-katkova-160216031537">
+						<div class="slider-item js-slide" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1456346709/general/yulia-banner.jpg')">
+					</div>
+
+					<!-- <a href="https://kuestionario.typeform.com/to/VNsGbl">
 					<div class="slider-item js-slide" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065551/general/home-slider-2.jpg')">
 						<div class="slider-item-inner">
 							<p class="title">Participa y gana una exposicion en Casa Pausa</p>
 						</div>
-					</div>
+					</div> -->
 				</a>
 				</div>
 				<div class="slider-nav">
