add seller text views

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2154,13 +2154,27 @@ white = #fff
 			flex 1
 		.text
 			padding 0 20px
-
+		&.main
+			text-align center
+			font-size 15px
+			line-height: 1.25;
+			
 	.title
 		font-family 'Montserrat', sans-serif
 		font-size 14px
 		color charcoal-grey
 		padding-bottom 10px
 		padding-top 20px
+		
+	.subtitle
+		font-family: 'PT Serif', serif;
+		font-size 14px
+		color #333
+		
+	.check-title
+		font-family: 'PT Serif', serif;
+		font-size 14px
+		color charcoal-grey		
 
 	.input
 		border solid 1px #979797
