--- a/app/views/user/account/seller.html
+++ b/app/views/user/account/seller.html
@@ -37,8 +37,8 @@
 				<div class="am-profile-box grid-container u-margin-top-20">
 					<form class="complete-form">
 
-						<div class="separator u-margin-top-30">
-							<span class="line"></span><span class="text">VALIDACIÓN DE VENDEDOR</span><span class="line"></span>
+						<div class="separator main u-margin-top-30">
+							<span class="line"></span><span class="text">VALIDACIÓN<br>DE VENDEDOR</span><span class="line"></span>
 						</div>
 
 						<div class="grid-50 mobile-grid-100">
@@ -108,6 +108,18 @@
 								<input class="input" type="text" value="" name='' placeholder="Ingresa un documento válido"/>
 								<p class="title">Nombre completo/razón social</p>
 								<input class="input" type="text" value="" name='' placeholder="Ingresa un documento válido"/>
+
+								<p class="title">Acuerdos con el usuario</p>
+
+								<p class="subtitle">Cuando se vende una obra o producto en la plataforma, la venta ocurre entre tú y el comprador final. Arte Manifiesto funciona como tu agente. Para hacer esto, tienes que darnos permisos explícitos</p>
+
+								<table>
+									<tr>
+										<td><input type="checkbox" name="" value=""></td>
+										<td class="check-title">Acepto los términos y condiciones para vendedores en la plataforma.</td>
+									</tr>
+								</table>
+
 							</div>
 							
 						</div>
