finish seller view

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2174,7 +2174,10 @@ white = #fff
 	.check-title
 		font-family: 'PT Serif', serif;
 		font-size 14px
-		color charcoal-grey		
+		color charcoal-grey
+		a
+			color charcoal-grey
+			text-decoration underline
 
 	.input
 		border solid 1px #979797
@@ -2242,6 +2245,12 @@ white = #fff
 			display table
 			margin 20px auto
 			max-width: 220px
+			&.green
+				background: #85d78d;
+				color: white;
+			&.red
+				background: #ff6666;
+				color: white;
 
 	.link
 		font-family 'Montserrat', sans-serif
