--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -19,35 +19,7 @@
 		<div class="grid-container">
 			<div class="grid-100">
 				{% if !context %}
-				<div class="am-Filter account mobile u-margin-top-10">
-					<div class="am-Filter-item">
-						<header class="am-Filter-header">
-							<i class="bi_user-single-a"></i><p>Mi cuenta</p>
-						</header>
-					</div>
-					<div class="am-Filter-item">
-						<ul class="am-Filter-subOptions">
-							<a href="/user/{{profile.username}}/account/" class="selected">Mis datos de perfil</a>
-							<a href="#">Mis compras</a>
-							<a href="#">Mis direcciones de envío</a>
-							<a href="#">Métodos de pago</a>
-							<a href="#">Configuracion cuenta</a>
-							<a href="/user/{{profile.username}}/account/password">Cambiar contraseña</a>
-							<a href="/user/{{profile.username}}/account/seller">Editar datos de vendedor</a>
-							<a href="#">Gestor de pedidos</a>
-						</ul>
-					</div>
-					<!-- <div class="am-Filter-item">
-						<header class="am-Filter-header">
-							<i class="fa fa-bars"></i><p>Tienda en línea</p>
-						</header>
-					</div>
-					<div class="am-Filter-item">
-						<ul class="am-Filter-subOptions">
-							<a href="#">Quiero abrir mi tienda</a>
-						</ul>
-					</div> -->
-				</div>
+					{% include '../../partials/account-menu.html' %}
 				{% endif %}
 
 				<div class="am-profile-box grid-container u-margin-top-20">
