--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -5010,7 +5010,13 @@ white = #fff
 			max-width 200px
 		.textarea
 			min-height 75px
-
+		.checks
+			font-family: 'PT Serif', serif;
+			font-size 13px
+			color #777
+			display: flex;
+			align-items: center;
+			padding: 8px 0;
 		.title
 			font-family: 'Montserrat',sans-serif;
 			font-size 14px
@@ -5040,7 +5046,7 @@ white = #fff
 
 		.sizes
 			max-width 200px
-			margin auto
+			margin 30px auto 0 auto
 
 
 .products-creator
@@ -5082,6 +5088,10 @@ white = #fff
 
 .creator-confirm
 	display flex
+	max-width 1000px
+	margin auto
+	padding: 50px 10px;
+	align-items: center;
 	.title
 		font-family: 'Montserrat',sans-serif;
 		font-weight bold
@@ -5089,12 +5099,11 @@ white = #fff
 		color #393d3f
 		flex 1
 	.options
-		flex 1
 		display flex
-		justify-content center
+		width: 480px;
 		.sales-button
-			margin-left: initial;
-			margin-right: initial;
+			margin: 10px;
+			
 
 @keyframes load
 	0%
