add conditions in sell

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -5010,6 +5010,7 @@ white = #fff
 			max-width 200px
 		.textarea
 			min-height 75px
+		
 		.checks
 			font-family: 'PT Serif', serif;
 			font-size 13px
@@ -5017,6 +5018,24 @@ white = #fff
 			display: flex;
 			align-items: center;
 			padding: 8px 0;
+		
+		.prices
+			font-family: 'Montserrat',sans-serif;
+			font-size 12px
+			color charcoal-grey
+			.plus
+				color: #00f;
+				text-align: center;
+				font-size: 24px;
+				font-weight: 500;
+			.text
+				padding-left 20px
+			.input
+				margin-bottom 0
+				padding: 13px 10px;
+				min-width 200px
+				text-align center
+			
 		.title
 			font-family: 'Montserrat',sans-serif;
 			font-size 14px
@@ -5027,6 +5046,15 @@ white = #fff
 			font-size 14px
 			color warm-grey
 			margin-bottom 25px
+			line-height 1.2
+			a
+				text-decoration underline
+				color warm-grey 
+		.subtitle-mall
+			font-family: 'Montserrat', sans-serif;
+			font-size 12px
+			color warm-grey
+			margin-top 20px
 
 		.switchs
 			width 100%
