--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -246,6 +246,75 @@
 
 	<div class="grid-container">
 		<div class="grid-100">
+
+			<div class="sales">
+				<div class="sales-left">
+					<div class="sales-image-card">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
+						<div class="content">
+							<a href="#" class="title">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT SLEEP</a>
+							<a href="#" class="author">Sergio Gonzales Mucho</a>
+						</div>
+					</div>
+				</div>
+				<div class="sales-right">
+
+					<p class="title u-margin-top-10" style="text-align: center;">CONDICIONES DE VENTA</p>
+					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
+
+					<p class="title">Calculadora de precios</p>
+					<p class="subtitle">AM cobra una comisión de 30% en la venta de obras y creaciones originales.
+						<br><br>
+						Asegúrate de leer los términos y condiciones sobre nuestro servicio aquí.
+						<br><br>
+						<a href="#">
+							Términos y condiciones del servicio
+							Guía del vendedor en AM
+						</a>
+					</p>
+
+					<p class="title">Tipo de empaque</p>
+
+					<div class="checks">
+						<input class="check" type="checkbox" name="package-type"></input>
+						<label class="label-check">Empaque en tubo</label>
+
+						<input class="check" type="checkbox" name="package-type"></input>
+						<label class="label-check">Empaque en caja</label>
+					</div>
+
+					
+					<table class="prices u-margin-top-20">
+						<tr>
+							<td><input class="input" type="text" placeholder="¿Cuanto quieres ganar?"></input></td>
+							<td><p class="text">Precio base (ganancia del artista)</p></td>
+						</tr>
+						<tr>
+							<td><p class="plus">+</p></td>
+						</tr>
+						<tr>
+							<td><input class="input" type="text" placeholder="0:00"></input></td>
+							<td><p class="text">Comisión AM (30%)</p></td>
+						</tr>
+						<tr>
+							<td><div class="u-separator u-margin-top-20 u-margin-bottom-20" style="background: #979797;"></div></td>
+						</tr>
+						<tr>
+							<td><input class="input" type="text" placeholder="Precio final"></input></td>
+							<td><p class="text">Precio de lista (*)</p></td>
+						</tr>
+					</table>
+
+					<p class="subtitle-mall">* El precio de lista no incluye impuestos en cada país, ni el costo de envío.</p>
+
+					<a class="sales-button u-margin-top-30 u-margin-bottom-30">APLICAR CAMBIOS</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="grid-container">
+		<div class="grid-100">
 			<div class="creator-confirm">
 				<p class="title">¿Confirmar productos?</p>
 				<div class="options">
