--- a/app/views/pages/feed.html
+++ b/app/views/pages/feed.html
@@ -6,6 +6,8 @@
 
 {% block elements %}
 
+	<a href="#" id="back-to-top" title="Back to top"><i class="fa fa-chevron-up"></i></a>
+
 	<a id="go-collection-modal" href="#collection-modal"></a>
 	<a id="go-share-modal" href="#share-modal"></a>
 
