--- a/app/views/blog/post.html
+++ b/app/views/blog/post.html
@@ -27,6 +27,33 @@
 {% endblock %}
 
 {% block elements %}
+  <!-- ********************************************************************
+    $ BLOG HEADER
+  ********************************************************************* -->
+  <div class="grid-container">
+    <div class="grid-100">
+      <header class="header-blog">
+        <a href="/blog">
+          <div class="logo" style="">
+          <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1454309967/general/am-blog.png">
+          </div>
+        </a>
+        <div class="menu">
+          {% for category in categories %}
+            <a href="/blog/category/{{category.nameSlugify}}"
+               class="item uppercase {{category.nameSlugify}}-blog-menu">{{category.name}}</a>
+          {% endfor %}
+        </div>
+        <div class="socials">
+          <p class="label">Síguenos:</p>
+          <a href="https://www.facebook.com/artemanifiesto" class="bi_logo-facebook"></a>
+          <a href="https://twitter.com/artemanifiesto" class="bi_logo-twitter"></a>
+          <a href="https://www.instagram.com/artemanifiesto/" class="bi_logo-instagram"></a>
+        </div>
+      </header>
+    </div>
+  </div>
+
   <div id="fb-root"></div>
 
   <div class="blog-single-cover" >
