--- a/app/views/pages/users.html
+++ b/app/views/pages/users.html
@@ -10,6 +10,8 @@
 
 {% include '../partials/banner.html' %}
 
+<a href="#" id="back-to-top" title="Back to top"><i class="fa fa-chevron-up"></i></a>
+
 <div style="max-width: 1500px; margin: auto; overflow: hidden">
 	<div class="grid-container u-padding-top-20">
 		<div class="grid-100 grid-parent">
@@ -81,6 +83,7 @@
 	</div>
 
 </div>
+
 {% endblock %}
 
 {% block scripts %}
