add comfirm seller

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2169,7 +2169,13 @@ white = #fff
 		color charcoal-grey
 		padding-bottom 10px
 		padding-top 20px
-		
+		&.comfirm
+			text-align center
+			font-size 16px
+			a
+				text-decoration underline
+				color charcoal-grey
+				
 	.subtitle
 		font-family: 'PT Serif', serif;
 		font-size 14px
