--- a/app/views/partials/account-menu.html
+++ b/app/views/partials/account-menu.html
@@ -1,4 +1,4 @@
-				<div class="am-Filter account mobile u-margin-top-10" style="position: absolute;">
+				<div class="am-Filter account mobile u-margin-top-10">
 					<div class="am-Filter-item">
 						<header class="am-Filter-header">
 							<i class="bi_user-single-a"></i><p>Mi cuenta</p>
