--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -5049,6 +5049,35 @@ white = #fff
 				min-width 200px
 				text-align center
 		
+		.back-color
+			display flex
+			justify-content space-between
+			align-items center
+			margin 20px 0 10px 0
+			.subtitle
+				margin-bottom 0
+			select
+				border solid 1px #979797
+				border-radius 4px
+			// option
+			// 	background red
+			// option:after
+			// 	content: "holi!";
+			// 	height: 5px;
+			// 	width: 5px;
+			// 	border-radius: 5px;
+			// 	display: inline-block;
+			// 	height: 5px;
+			// 	width: 5px;
+			// 	border-radius: 5px;
+			// 	display: inline-block;
+			// 	background red
+		.aligns
+			display flex
+			padding-top 10px
+			margin-bottom 100px
+			.sales-button
+				min-width 130px
 		.prints
 			.type
 				display flex
