--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -294,7 +294,60 @@
 		</div>
 	</div>
 
-	<!-- SALES 3-->
+	<!-- SALES 3 -->
+	<div class="grid-container">
+		<div class="grid-100">
+			<div class="sales">
+				<div class="sales-left">
+					<div class="sales-image-card">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
+						<div class="content">
+							<a href="#" class="title">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT SLEEP</a>
+							<a href="#" class="author">Sergio Gonzales Mucho</a>
+						</div>
+					</div>
+				</div>
+				<div class="sales-right">
+
+					<p class="title u-margin-top-10" style="text-align: center;">PRINTS: EDICIÓN</p>
+					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
+
+					<p class="title">Hacer prints nunca fué tan fácil</p>
+					<p class="subtitle">
+						Al subir la imagen el tamaño mínimo es 1600x1600 pixeles para crear prints.
+						<br><br>
+						Puedes elegir entre:
+						<br>
+						Poster print / Photo Luster Print / Fine Art Print (100% algodón) / Canvas Print
+					</p>
+
+					<a href="" class="sales-button white">REEMPLAZAR IMAGEN</a>
+
+					<div class="back-color">
+						<p class="subtitle">Color de fondo:</p>
+						<select>
+							<option></option>
+							<option></option>
+							<option></option>
+						</select>
+					</div>
+
+					<p class="subtitle" style="margin-bottom: 0;">Centrar diseño:</p>
+					
+					<div class="aligns">
+						<a href="" class="sales-button white">VERTICAL</a>
+						<a href="" class="sales-button white">HORIZONTAL</a>
+					</div>
+
+					<a class="sales-button u-margin-top-30 u-margin-bottom-10">GUARDAR CAMBIOS</a>
+
+					<a class="help-button u-margin-top-10 u-margin-bottom-10">Necesitas ayuda?</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- SALES 4 -->
 	<div class="grid-container">
 		<div class="grid-100">
 			<div class="sales">
