--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -253,6 +253,66 @@
 		</div>
 	</div>
 
+	<!-- SALES 3 -->
+	<div class="grid-container">
+		<div class="grid-100">
+			<div class="sales">
+				<div class="sales-left">
+					<div class="sales-image-card">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
+						<div class="content">
+							<a href="#" class="title">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT SLEEP</a>
+							<a href="#" class="author">Sergio Gonzales Mucho</a>
+						</div>
+					</div>
+				</div>
+				<div class="sales-right">
+
+					<p class="title u-margin-top-10" style="text-align: center;">TAZAS: CONDICIONES DE VENTA</p>
+					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
+
+					<p class="title">Condiciones</p>
+					<p class="subtitle">
+						AM te cobra por la fabricación del producto, no por la venta. Sugerimos que tu margen sea +20%, pero puedes incrementarlo si conoces tu mercado.
+					</p>
+					
+					<table class="prints u-margin-top-20 u-margin-bottom-40" style="display: inline-block;">
+						<tr>
+							<td><p class="title">TIPO DE PRINT</p></td>
+							<td><p class="title">MARGEN</p></td>
+						</tr>
+						<tr>
+							<td>
+								<div class="type">
+									<input type="checkbox"></input>
+									<div>
+										<p>TAZA 11 OZ</p>
+										<p>$10.23 - $24.32</p>
+									</div>
+								</div>
+							</td>
+							<td>
+								<div class="data">
+									<input type="text"></input>
+									<div>
+										<p>PARA TÍ</p>
+										<p>$10.23 - $24.32</p>
+									</div>
+								</div>
+							</td>
+						</tr>
+					</table>
+
+					<p class="subtitle-mall u-margin-top-50">* El precio de lista no incluye impuestos en cada país, ni el costo de envío.</p>
+
+					<a class="sales-button u-margin-top-30 u-margin-bottom-10">APLICAR CAMBIOS</a>
+
+					<a class="help-button u-margin-top-10 u-margin-bottom-10">Necesitas ayuda?</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="grid-container">
 		<div class="grid-100 grid-parent">
 
@@ -294,7 +354,7 @@
 		</div>
 	</div>
 
-	<!-- SALES 3 -->
+	<!-- SALES 4 -->
 	<div class="grid-container">
 		<div class="grid-100">
 			<div class="sales">
@@ -347,7 +407,7 @@
 		</div>
 	</div>
 
-	<!-- SALES 4 -->
+	<!-- SALES 5 -->
 	<div class="grid-container">
 		<div class="grid-100">
 			<div class="sales">
