--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -5059,6 +5059,16 @@ white = #fff
 			select
 				border solid 1px #979797
 				border-radius 4px
+		.size-work
+			display flex
+			align-items center
+			input
+				flex 1
+				margin-right 10px
+			p
+				font-family: 'PT Serif', serif;
+				font-size 12px
+				color #333
 		.aligns
 			display flex
 			padding-top 10px
