--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -422,6 +422,62 @@
 				</div>
 				<div class="sales-right">
 
+					<p class="title u-margin-top-10" style="text-align: center;">TAZAS: EDICIÓN</p>
+					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
+
+					<p class="title">Crea tazas geniales con solo un click</p>
+					<p class="subtitle">
+						Acomoda la imagen de tu obra sobre la taza. Para un resultado óptimo crea una imagen de 2700x1624 píxeles que se acomode al formato.
+					</p>
+
+					<a href="" class="sales-button white">REEMPLAZAR IMAGEN</a>
+
+					<div class="back-color">
+						<p class="subtitle">Color de fondo:</p>
+						<select>
+							<option></option>
+							<option></option>
+							<option></option>
+						</select>
+					</div>
+
+					<p class="subtitle u-margin-top-30" style="margin-bottom: 0;">Tamaño obra en el producto:</p>
+
+					<div class="size-work">
+						<input type="range" name="" min="0" max="10">
+						<p>50%</p>
+					</div>
+
+					<p class="subtitle u-margin-top-20" style="margin-bottom: 0;">Centrar diseño:</p>
+					
+					<div class="aligns">
+						<a href="" class="sales-button white">VERTICAL</a>
+						<a href="" class="sales-button white">HORIZONTAL</a>
+					</div>
+
+					<a class="sales-button u-margin-top-30 u-margin-bottom-10">GUARDAR CAMBIOS</a>
+
+					<a class="help-button u-margin-top-10 u-margin-bottom-10">Necesitas ayuda?</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- SALES 6 -->
+	<div class="grid-container">
+		<div class="grid-100">
+			<div class="sales">
+				<div class="sales-left">
+					<div class="sales-image-card">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
+						<div class="content">
+							<a href="#" class="title">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT SLEEP</a>
+							<a href="#" class="author">Sergio Gonzales Mucho</a>
+						</div>
+					</div>
+				</div>
+				<div class="sales-right">
+
 					<p class="title u-margin-top-10" style="text-align: center;">OBRA ORIGINAL: CONDICIONES DE VENTA</p>
 					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
 
