add cup previews

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -5069,6 +5069,13 @@ white = #fff
 				font-family: 'PT Serif', serif;
 				font-size 12px
 				color #333
+		.views
+			display flex
+			img
+				flex 1
+				width 100px
+				height 100px
+				margin 10px
 		.aligns
 			display flex
 			padding-top 10px
