--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -450,9 +450,17 @@
 
 					<p class="subtitle u-margin-top-20" style="margin-bottom: 0;">Centrar diseño:</p>
 					
-					<div class="aligns">
+					<div class="aligns" style="margin-bottom: 0;">
 						<a href="" class="sales-button white">VERTICAL</a>
 						<a href="" class="sales-button white">HORIZONTAL</a>
+					</div>
+
+					<p class="subtitle u-margin-top-20" style="margin-bottom: 0;">Vista por defecto:</p>
+
+					<div class="views">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065546/general/discover-banner-works.jpg">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065546/general/discover-banner-works.jpg">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065546/general/discover-banner-works.jpg">
 					</div>
 
 					<a class="sales-button u-margin-top-30 u-margin-bottom-10">GUARDAR CAMBIOS</a>
