--- a/app/views/user/account/seller-org.html
+++ b/app/views/user/account/seller-org.html
@@ -68,7 +68,7 @@
   <script src='//maps.googleapis.com/maps/api/js?libraries=places'></script>
 	<script>
 		$(function() {
-			new APP.AccountApplyScreen();
+			new APP.AccountSellerScreen();
 			$('.account-title').click(function () {
 				$('.am-Filter.account.mobile').toggleClass('visible')
 			});
