--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2327,6 +2327,139 @@ white = #fff
 			p
 				margin auto
 
+	.open-seller
+		&-box
+			background rgba(#eee, .87)
+			display flex
+			align-items center
+			padding 14px 46px
+			border solid 1px #979797
+			border-radius 3px
+			.number
+				font-family 'Montserrat', sans-serif
+				font-weight bold
+				color #333
+				font-size 14.4px
+				width 32px
+				height 32px
+				border-radius 50%
+				border solid 1px #979797
+				display flex
+				align-items center
+				justify-content center
+				background white
+				&.check
+					background #7ed321
+			.icon
+				width 16px
+				height 16px
+				background #f8f197
+				border solid 1px #61565a
+				border-radius 50%
+				display flex
+				align-items center
+				justify-content center
+				font-size .5em
+				margin 10px
+			p
+				font-family 'Montserrat', sans-serif
+				font-size 14px
+				color #333
+				padding 0 10px
+				flex 1
+				a
+					text-decoration underline
+					color #333
+					
+			.seller-button
+				border solid 1px #333
+				border-radius 3px
+				font-family 'Montserrat', sans-serif
+				font-weight bold
+				font-size 10px
+				min-width 120px
+				text-align center
+				padding 5px 0
+				background white
+				letter-spacing 2px
+				color #333
+				&.small
+					min-width 55px
+					color white
+					&.red
+						background #ff6666
+					&.green
+						background #3bd64a
+					&:not(:first-child)
+						margin-left 10px
+					
+
+		&-main-title
+			font-size 18px
+			color charcoal-grey
+			font-family 'Montserrat', sans-serif
+			padding-bottom 5px
+		&-secondary-title
+			padding-bottom 5px
+			font-family 'Montserrat', sans-serif
+			font-size 14px
+			color #333
+		&-item
+			display flex
+			margin 10px 0
+			img
+				width 140px
+				height 140px
+			.information-left
+				padding-left 10px
+				&-title
+					font-family 'Montserrat', sans-serif
+					color charcoal-grey
+					font-weight bold
+					font-size 12px
+					line-height 1.15
+					padding-bottom 3px
+				&-subtitle
+					font-family: 'PT Serif', serif;
+					font-size 12px
+					color warm-grey 
+					padding-bottom 3px
+				&-description
+					line-height 1.15
+					font-family 'Montserrat', sans-serif
+					font-size 10px
+					color charcoal-grey
+			
+			.information-center
+				font-family 'Montserrat', sans-serif
+				font-size 10px
+				color charcoal-grey
+				margin-right 10px
+				margin-left 10px
+				a
+					text-decoration underline
+					color #333
+			.information-right
+				font-family 'Montserrat', sans-serif
+				font-size 10px
+				color charcoal-grey
+				.table
+					display flex
+					.left
+						text-align right
+						margin-right 10px
+					p
+						margin-bottom 8px
+					.green
+						color #417505
+					.bold
+						font-weight bold
+				a
+					color #333
+					text-decoration underline
+					display table
+					margin auto
+
 
 @media (min-width: 630px)
 	.am-profile-box
