--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -181,6 +181,7 @@
 	var errorMessage = {{errorMessage|json|safe}};
 	var successMessage = {{successMessage|json|safe}};
 	var user = {{user|json|safe}};
+	var cl_preset = {{cl_preset|json|safe}};
 
 	$(function() {new APP.AM();});
 	</script>
